--- a/gc_rs_tests/Cargo.toml
+++ b/gc_rs_tests/Cargo.toml
@@ -3,7 +3,13 @@ name = "gc_rs_tests"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "gc_rs_tests"
+path = "src/lib.rs"
+
+[[bin]]
+name = "leak_check"
+path = "src/bin.rs"
 
 [dependencies]
 gc_rs = { path = "../gc_rs" }
